# xrpl-hook-template

./: .gitignore  Cargo.toml  README.md  build  build_examples  pay.js  set_hook.js
examples/: accept.wasm  carbon.wasm  doubler.wasm
examples/accept/: main.rs
examples/carbon/: main.rs
examples/doubler/: main.rs
src/: lib.rs
