[package]
name = "template-hook"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.dev]
opt-level = 2
lto = true
panic = 'abort'
debug = false
debug-assertions = true
overflow-checks = false
incremental = false
codegen-units = 1

[profile.release]
opt-level = 2
lto = true
panic = 'abort'
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 1

[dependencies]
xrpl-hooks = "0.3.1"
